--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "9.5.5",
+    "dexie": "^3.2.2",
+    "dexie-cloud-addon": "^4.0.0-beta.21",
+    "dexie-react-hooks": "^1.1.1",
+    "next": "12.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "eslint": "8.7.0",
